<resources>
    <string name="application_name">BoxPlay</string>
    <string name="transition_view_reveal">view_reveal</string>
    <string name="boxplay_viewhelper_recaching">Re-caching...\nPlease restart the app to apply new language everywhere!</string>
    <string name="boxplay_menu_action_search">Search</string>
    <string name="boxplay_menu_action_update">Update</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="boxplay_update_uptodate">Already up to date!</string>
    <string name="boxplay_update_available" formatted="false">Update available! %s</string>
    <string name="boxplay_update_available_message_format" formatted="false">Version: _version_ \nName: _name_ \nSize: _size_ \n\nDownloaded: _downloaded_</string>
    <string name="boxplay_update_available_message_format_size_searching">[searching]</string>
    <string name="boxplay_update_available_message_format_size_searching_error">[error]</string>
    <string name="boxplay_update_available_download_starting">Starting downloading in background...</string>
    <string name="boxplay_update_available_install">Download finished, you can now install the update</string>
    <string name="boxplay_update_available_download_failed" formatted="false">Download failed, try again later!\n\nError: %s</string>
    <string name="boxplay_update_available_download">Download it!</string>
    <string name="boxplay_update_available_cancel">Cancel</string>
    <string name="boxplay_navigation_version">BoxPlay 3</string>
    <string name="boxplay_navigation_author">by Enzo CACERES</string>
    <string name="boxplay_store">Store</string>
    <string name="boxplay_store_video">Video</string>
    <string name="boxplay_store_music">Music</string>
    <string name="boxplay_store_files">Files</string>
    <string name="boxplay_connect">Connect</string>
    <string name="boxplay_connect_feed">Feed</string>
    <string name="boxplay_connect_friends">Friends</string>
    <string name="boxplay_connect_chat">Chat</string>
    <string name="boxplay_culture">Culture</string>
    <string name="boxplay_culture_searchngo">Search n\' Go</string>
    <string name="boxplay_premium">Premium</string>
    <string name="boxplay_premium_adult">Adult</string>
    <string name="boxplay_mylist">My Lists</string>
    <string name="boxplay_mylist_watchlater">Watch Later</string>
    <string name="boxplay_other">Other</string>
    <string name="boxplay_other_settings">Settings</string>
    <string name="boxplay_other_about">About</string>
    <string name="boxplay_preferences_title">BoxPlay Settings</string>
    <string name="boxplay_tutorial_main_drawer_title">Drawer</string>
    <string name="boxplay_tutorial_main_drawer_description">You will be able to access to other page from it!</string>
    <string name="boxplay_tutorial_main_search_title">Search</string>
    <string name="boxplay_tutorial_main_search_description">Linked to all element of the store, you will be able to search anything by name!</string>
    <string name="boxplay_tutorial_main_options_title">Quick Access Menu</string>
    <string name="boxplay_tutorial_main_options_description">Contains some commands, like updating the apps...</string>
    <string name="boxplay_tutorial_main_swipe_title">Swipeable</string>
    <string name="boxplay_tutorial_main_swipe_description">Swipe right to left to access all files!</string>
    <string name="boxplay_tutorial_main_video_title">BoxPlay Store Video</string>
    <string name="boxplay_tutorial_main_video_description">Contains all video available on the store!</string>
    <string name="boxplay_tutorial_main_music_title">BoxPlay Store Music</string>
    <string name="boxplay_tutorial_main_music_description">Contains all music available on the store!</string>
    <string name="boxplay_tutorial_video_back_title">Exit this menu</string>
    <string name="boxplay_tutorial_video_back_description">Get back to main app with this arrow or the back button</string>
    <string name="boxplay_tutorial_video_watch_list_title">Watching list</string>
    <string name="boxplay_tutorial_video_watch_list_description">Add this serie/movie in your watching list to get on it more quicker!</string>
    <string name="boxplay_tutorial_video_season_selector_title">Season selector</string>
    <string name="boxplay_tutorial_video_season_selector_description">Select any season available with this selector!</string>
    <string name="boxplay_tutorial_video_season_watched_title">Mark as watched</string>
    <string name="boxplay_tutorial_video_season_watched_description">Mark this season as watched when you finish to watch all of episodes!</string>
    <string name="boxplay_tutorial_video_episodes_title">See episodes</string>
    <string name="boxplay_tutorial_video_episodes_description">All episodes available are in this list, just watch one of them by opening the little menu!</string>
    <string name="boxplay_store_video_video">Video</string>
    <string name="boxplay_store_video_file_type_anime">Anime%s</string>
    <string name="boxplay_store_video_file_type_serie">Serie%s</string>
    <string name="boxplay_store_video_file_type_movie">Movie%s</string>
    <string name="boxplay_store_video_file_type_animemovie">Movie%s</string>
    <string name="boxplay_store_video_type_episode">Episode</string>
    <string name="boxplay_store_video_type_oav">OAV</string>
    <string name="boxplay_store_video_type_special">Special</string>
    <string name="boxplay_store_video_type_movie">Movie</string>
    <string name="boxplay_store_video_type_other">Other</string>
    <string name="boxplay_store_video_language_french">FRENCH</string>
    <string name="boxplay_store_video_language_english_subtitle_french">ENGLISH SUB. FR.</string>
    <string name="boxplay_store_video_language_japanese_subtitle_french">JAPANESE SUB. FR.</string>
    <string name="boxplay_store_video_category_your_list">Your watching list</string>
    <string name="boxplay_store_video_category_recommended">Recommended*</string>
    <string name="boxplay_store_video_category_animes">Animes</string>
    <string name="boxplay_store_video_category_movies">Movies</string>
    <string name="boxplay_store_video_category_series">Series</string>
    <string name="boxplay_store_video_category_random">Random</string>
    <string name="boxplay_store_video_category_release">Release</string>
    <string name="boxplay_store_video_enum_unknown">*unknown*</string>
    <string name="boxplay_store_video_data_downloading">downloading...</string>
    <string name="boxplay_store_data_downloading_new_content">new content available!</string>
    <string name="boxplay_store_video_data_watching">Added to watching list</string>
    <string name="boxplay_store_video_data_unwatching">Removed from watching list</string>
    <string name="boxplay_store_video_season_selector_item">Season %s</string>
    <string name="boxplay_store_video_season_view" formatted="false">%s season%s</string>
    <string name="boxplay_store_video_season_selector_item_no_season">No season</string>
    <string name="boxplay_store_video_group_watched"></string>
    <string name="boxplay_store_video_season_selector_result">%s</string>
    <string name="boxplay_store_video_activity_episode_title" formatted="false">%s %s</string>
    <string name="boxplay_store_video_activity_movie_title" formatted="false">%s (%s)</string>
    <string name="boxplay_store_video_activity_episode_language" formatted="false">%s</string>
    <string name="boxplay_store_video_activity_episode_time" formatted="false">%s/%s</string>
    <string name="boxplay_store_video_activity_episode_time_watched">Watched</string>
    <string name="boxplay_store_video_activity_episode_time_available">Available</string>
    <string name="boxplay_store_video_activity_episode_time_unavailable">Not available</string>
    <string name="boxplay_store_video_activity_vlc_title" formatted="false">[%s] %s, season %s, %s %s</string>
    <string name="boxplay_store_video_activity_vlc_title_movie" formatted="false">[%s] %s</string>
    <string name="boxplay_store_video_button_play">PLAY</string>
    <string name="boxplay_store_video_button_download">DOWNLOAD</string>
    <string name="boxplay_store_video_button_watch">WATCH</string>
    <string name="boxplay_store_video_button_share">SHARE</string>
    <string name="boxplay_store_video_button_share_url">URL</string>
    <string name="boxplay_store_music_menu_popup_action_play">Play</string>
    <string name="boxplay_store_music_menu_popup_action_play_after">Play After</string>
    <string name="boxplay_store_music_menu_popup_action_add_to_queue">Add to Queue</string>
    <string name="boxplay_store_music_menu_popup_action_download">Download</string>
    <string name="boxplay_other_settings_store_music_category_title">Store > Music</string>
    <string name="boxplay_other_settings_store_music_pref_my_genre_title">My Music Genre</string>
    <string name="boxplay_other_settings_store_music_pref_my_genre_dialog_ok">DONE</string>
    <string name="boxplay_other_settings_store_music_pref_my_genre_key">store_music_my_genre</string>
    <string name="boxplay_other_settings_boxplay_category_title">BoxPlay</string>
    <string name="boxplay_other_settings_boxplay_pref_background_service_title">Allow backgrounds services</string>
    <string name="boxplay_other_settings_boxplay_pref_background_service_key">boxplay_background_service</string>
    <string name="boxplay_other_settings_boxplay_pref_force_factory_title">Force data processing</string>
    <string name="boxplay_other_settings_boxplay_pref_force_factory_key">boxplay_force_factory</string>
    <string name="boxplay_other_settings_boxplay_pref_reset_tutorials_title">Reset tutorials progress</string>
    <string name="boxplay_other_settings_boxplay_pref_reset_tutorials_key">boxplay_reset_tutorials</string>
    <string name="boxplay_other_settings_premium_category_title">Premium</string>
    <string name="boxplay_other_settings_premium_pref_premium_key_title">Premium Activation Key</string>
    <string name="boxplay_other_settings_premium_pref_premium_key_key">premium_key</string>
    <string name="boxplay_other_settings_debug_category_title">Debug</string>
    <string name="boxplay_other_settings_debug_pref_extractor_show_logs_title">Show extractors logs</string>
    <string name="boxplay_other_settings_debug_pref_extractor_show_logs_key">debug_extractor_show_logs</string>
    <string name="boxplay_other_settings_menu_category_title">Menu</string>
    <string name="boxplay_other_settings_menu_pref_drawer_extend_collapse_back_button_title">Back button</string>
    <string name="boxplay_other_settings_menu_pref_drawer_extend_collapse_back_button_key">menu_exit_on_back</string>
    <string name="boxplay_other_settings_application_category_title">Application</string>
    <string name="boxplay_other_settings_application_pref_language_title">Select language</string>
    <string name="boxplay_other_settings_application_pref_language_key">application_language</string>
    <string name="boxplay_other_settings_application_pref_language_default_value">en</string>
    <string name="boxplay_other_settings_application_pref_crash_reporter_title">Enable Crash-Reporter</string>
    <string name="boxplay_other_settings_application_pref_crash_reporter_key">application_crash_reporter</string>
    <string name="boxplay_other_settings_application_pref_clear_image_cache_title">Clear image cache</string>
    <string name="boxplay_other_settings_application_pref_clear_image_cache_key">application_clear_image_cache</string>
    <string name="boxplay_error_row_default_title">Oops!</string>
    <string name="boxplay_error_row_default_content">It\'s seems that an error just happen!</string>
    <string name="boxplay_error_row_default_button">Button</string>
</resources>