<?xml version="1.0" encoding="utf-8"?>
<!-- <menu xmlns:android="http://schemas.android.com/apk/res/android" -->
<!-- xmlns:app="http://schemas.android.com/apk/res-auto" -->
<!-- xmlns:tools="http://schemas.android.com/tools" -->
<!-- tools:context="com.eajy.materialdesigndemo.activity.MainActivity"> -->


<!-- <item -->
<!-- android:id="@+id/popup_menu_action_1" -->
<!-- android:orderInCategory="100" -->
<!-- android:title="action 1" -->
<!-- app:showAsAction="never" /> -->


<!-- <item -->
<!-- android:id="@+id/popup_menu_action_2" -->
<!-- android:orderInCategory="100" -->
<!-- android:title="action 2" -->
<!-- app:showAsAction="never" /> -->


<!-- <item -->
<!-- android:id="@+id/popup_menu_action_3" -->
<!-- android:orderInCategory="100" -->
<!-- android:title="action 3" -->
<!-- app:showAsAction="never"> -->


<!-- <menu> -->
<!-- <item -->
<!-- android:id="@+id/popup_menu_action_4" -->
<!-- android:orderInCategory="100" -->
<!-- android:title="item 1" -->
<!-- app:showAsAction="never" /> -->
<!-- <item -->
<!-- android:id="@+id/popup_menu_action_5" -->
<!-- android:orderInCategory="100" -->
<!-- android:title="item 2" -->
<!-- app:showAsAction="never" /> -->
<!-- <item -->
<!-- android:id="@+id/popup_menu_action_6" -->
<!-- android:orderInCategory="100" -->
<!-- android:title="item 3" -->
<!-- app:showAsAction="never" /> -->
<!-- </menu> -->


<!-- </item> -->
<!-- </menu> -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/music_song_popup_action_play"
        android:icon="@drawable/icon_video_96px_q"
        android:orderInCategory="100"
        android:title="@string/boxplay_store_music_menu_popup_action_play"
        app:showAsAction="never"/>
    <item
        android:id="@+id/music_song_popup_action_play_after"
        android:icon="@drawable/icon_video_96px_q"
        android:orderInCategory="100"
        android:title="@string/boxplay_store_music_menu_popup_action_play_after"
        app:showAsAction="never"/>
    <item
        android:id="@+id/music_song_popup_action_add_to_queue"
        android:icon="@drawable/icon_video_96px_q"
        android:orderInCategory="100"
        android:title="@string/boxplay_store_music_menu_popup_action_add_to_queue"
        app:showAsAction="never"/>
    <item
        android:id="@+id/music_song_popup_action_download"
        android:icon="@drawable/icon_download"
        android:orderInCategory="100"
        android:title="@string/boxplay_store_music_menu_popup_action_download"
        app:showAsAction="never"/>

</menu>