<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/cardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/main_card_margin_vertical"
    android:layout_marginEnd="@dimen/main_card_margin_horizontal"
    android:layout_marginStart="@dimen/main_card_margin_horizontal"
    android:layout_marginTop="@dimen/main_card_margin_vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/item_store_page_all_error_textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/item_error_text_separation_padding"
            android:paddingLeft="@dimen/item_error_text_padding"
            android:paddingRight="@dimen/item_error_text_padding"
            android:paddingTop="@dimen/item_error_text_padding"
            android:text="@string/boxplay_error_row_default_title"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/item_store_page_all_error_textview_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/item_error_text_padding"
                android:paddingLeft="@dimen/item_error_text_padding"
                android:paddingRight="@dimen/item_error_text_padding"
                android:text="@string/boxplay_error_row_default_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <Button
                android:id="@+id/item_store_page_all_error_button_1"
                style="@style/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/boxplay_error_row_default_button" />

            <Button
                android:id="@+id/item_store_page_all_error_button_2"
                style="@style/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/boxplay_error_row_default_button" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>